# text-generation-inference

proto/: generate.proto
router/: Cargo.toml
router/client/src/: client.rs  lib.rs  sharded_client.rs
router/src/: batcher.rs  db.rs  lib.rs  server.rs
server/: Makefile  README.md
server/text_generation/: server.py
server/text_generation/models/: causal_lm.py  model.py  types.py
