[package]
name = "text-generation-router"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Dehaene"]
description = "Text Generation Webserver"

[lib]
path = "src/lib.rs"

[[bin]]
name = "text-generation-router"
path = "src/main.rs"

[dependencies]
axum = { version = "0.5.16", features = ["json", "serde_json"] }
text-generation-client = { path = "client" }
clap = { version = "4.0.15", features = ["derive", "env"] }
futures = "0.3.24"
nohash-hasher = "0.2.0"
parking_lot = "0.12.1"
serde = { version = "1.0.150", features = ["derive"]  }
serde_json = "1.0.85"
thiserror = "1.0.37"
tokenizers = "0.13.0"
tokio = { version = "1.21.1", features = ["rt", "rt-multi-thread", "parking_lot", "signal", "sync"] }
tokio-stream = "0.1.12"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["json"] }
warp = "0.3.4"
rustfmt = "0.10.0"
async-stream = "0.3.5"
